scripts/_deploy/_teamplate/grpc-<svc>/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <svc>
  labels:
    project: devops
    service: <svc>
    service-type: <service-type> #<service-type> / http
spec:
  selector:
    service: <svc>
  ports:
    - port: <port>
      name: <service-type>-<svc> #<service-type>: <service-type>前缀
      targetPort: <port>
