scripts/_deploy/_teamplate/grpc-<svc>/istio-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: <svc>
spec:
  host: <svc>
  subsets:
  - labels:
      version: primary
    name: primary
