scripts/_deploy/_teamplate/grpc-<svc>/istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: <svc>
spec:
  hosts:
  - <svc>
  http:
  - route:
    - destination:
        host: <svc>
        subset: primary
